# redditstories

./: .gitignore  Cargo.toml  readme.md
config/: forbidden_words.txt
src/: args.rs  audio.rs  main.rs  reddit.rs  subtitle.rs  tts.rs  utils.rs
