[package]
name = "redditstories"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.4"
regex = "1.10"
clap = { version = "4.3", features = ["derive"] }
anyhow = "*"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }